# projektna-naloga-uvp

./: .gitignore  README.md  pyproject.toml
output/: top_tv_shows.csv  toptv_shows_full_data.csv  toptv_shows_full_data.json
src/: app.py
src/get_data/: app.py
src/get_data/main/: debug.py  main.py  vars.py
src/get_data/main/cache/: cache.py
src/get_data/main/scraping/: scrape_imdb.py  scrape_trakt.py  scrape_wiki.py
src/get_data/res/temp_storage/: data_imdb.pkl  data_imdb_trakt.pkl  data_imdb_trakt_wiki.pkl
src/main/: main.py  vars.py
src/main/cache/: cache.py
src/main/scraping/: scrape.py  scrape_imdb.py  scrape_trakt.py  scrape_wiki.py  scraping_shared.py
src/parse_data/: parse_data.ipynb
src/parse_data/conf/: jupyter_notebook_conf.py
src/parse_data/helpers/: duration_ratings.py  genres_years.py  networks_studios.py  people.py  s_e_counts_ratings.py  serije_miniserije.py  years.py
temp1/: main.py  temp2.py
temp1/scraping/: scrape.py
temp_storage/: data_imdb.pkl  data_imdb_trakt.pkl  data_imdb_trakt_wiki.pkl  full_data.pkl  imdb_data_top_tv.pkl  top_tv_ids.pkl
tests/: test1.py  test2.py  test3.py  test4.py  test5.py  test6.py
