[project]
name = "projektna-naloga-uvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.13.4",
  "cinemagoer>=2023.5.1",
  "ddgs>=9.1.2",
  "playwright>=1.53.0",
  "requests>=2.32.4",
  "wikipedia>=1.4.0",
]

[tool.ruff.lint]
ignore = ["F401"]  # allow unused imports

[dependency-groups]
dev = [
    "decompyle3>=3.9.2",
]

